deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jobscheduling
  name: jobscheduling-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jobscheduling-deploy
  template:
    metadata:
      labels:
        name: jobscheduling-deploy
    spec:
      containers:
      - image: docker.io/cllebrun/manufdemo:1.0
        imagePullPolicy: Always
        name: appmanuf
        ports:
        - containerPort: 3000
