service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobscheduling-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: jobscheduling-deploy
  sessionAffinity: None
  type: ClusterIP
