route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: jobscheduling
  name: jobscheduling-route
spec:
  to:
    kind: Service
    name: jobscheduling-service
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
